# fasm-mac

./: .gitignore  AGENTS.md  README.md  dotfasm-mac  install.sh
.cursor/rules/: fasm-core-first.mdc
.github/workflows/: pages.yml  release.yml
Formula/: fasm-mac.rb  fmath.rb  fscan.rb  hexpeek.rb  httpmini.rb  logknife.rb  macdbg.rb  machodoctor.rb  pathsum.rb  ragbox.rb  raymaze.rb  setdb.rb  shipcheck.rb
data/: fasm_mac_readiness.setdb
docs/: .nojekyll  core_contracts.md  eml_sr.md  index.html  logvec.md  ragbox.md  robots.txt  sitemap.xml  system_form.md
fasm/: fasm  fasm.x64
fasm/apps/: eml_core.asm  eml_core.hpp  fmath.asm  fscan.asm  hexpeek.asm  httpmini.asm  logbus.asm  logknife.asm  logvec.zig  logvec_core.asm  macdbg.asm  machodoctor.asm  miniredis.asm  miniredis_server.asm  pathsum.asm  raymaze.asm  setdb.asm  (+1 more)
python/: CMakeLists.txt  README.md  pyproject.toml
python/eml_sr/: __init__.py  __main__.py  fit.py
python/src/: bindings.cpp
python/tests/: test_fit_exp.py
scripts/: bench_logvec.sh  bench_perf.sh  build-fmath-release.sh  build-fscan-release.sh  build-hexpeek-release.sh  build-httpmini-release.sh  build-logbus-release.sh  build-logknife-release.sh  build-macdbg-release.sh  build-machodoctor-release.sh  build-pathsum-release.sh  build-ragbox-release.sh  build-raymaze-release.sh  build-release-tarball.sh  build-setdb-release.sh  build-shipcheck-release.sh  check_core_contracts.sh  check_core_smoke.sh  check_eml_sr.sh  check_eml_sr_fast.sh  check_eml_sr_python.sh  check_fmath.sh  check_fscan.sh  check_hexpeek.sh  check_httpmini.sh  check_leetcode_examples.sh  check_logbus.sh  check_logknife.sh  check_logvec.sh  check_logvec_cpp.sh  check_logvec_search.sh  check_macdbg.sh  check_machodoctor.sh  check_miniredis_server.sh  check_pathsum.sh  check_ragbox.sh  check_ragbox_full.sh  check_ragbox_live.sh  check_ragbox_release.sh  check_raymaze.sh  (+4 more)
(+176 files in other folders)
